// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceRename Dialog closed Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="rename-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="rename-title" class="v-list-item__title text-left">Rename</div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceRename Dialog opened Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="rename-icon" class="v-icon notranslate v-icon--left mdi mdi-pencil theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="rename-title" class="v-list-item__title text-left">Rename</div>
  </div>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
